syntax = "proto3";

package reddit.post;

message Image {
  optional string url = 1;
}

message Video {
  repeated string frames = 2;
}

message PostMeta {
  optional string title = 1;
  optional string text = 2;
  optional int32 score = 3;
  optional PostState state = 4;
  optional string published = 5;
  optional int32 ID = 6;
  optional ContentType type = 9;

  enum ContentType {
    IMAGE = 0;
    VIDEO = 1;
  }

  enum PostState {
    NORMAL = 0;
    LOCKED = 1;
    HIDDEN = 2;
  }
}

message ImagePostResponse {
  PostMeta meta = 1;
  Image image = 2;
}

message VideoPostResponse {
  PostMeta meta = 1;
  Video video = 2;
}

message NewPostMeta {
  string title = 1;
  string text = 2;
  string state = 3;
}

message NewImagePostRequest {
  NewPostMeta meta = 1;
  Image image = 2;
}

message NewVideoPostRequest {
  NewPostMeta meta = 1;
  Video video = 2;
}

service PostService {
  rpc PostImage (NewImagePostRequest) returns (ImagePostResponse) {}
  rpc PostVideo (NewVideoPostRequest) returns (VideoPostResponse) {}
}
